fix alignement issue

--- a/credits/css/style.css
+++ b/credits/css/style.css
@@ -66,7 +66,9 @@ body{
 }
 
 
-
+#btn-create {
+	width: 100%;
+}
 
 #dragdrop-container {
 
